stop main from overlapping the navbar

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,10 +37,11 @@ a {
 
 main{
     display: block;
+    position: relative;
 
-    .main-top {
-        margin-top: -4.5%;
-    }
+    // .main-top {
+    //     margin-top: -4.5%;
+    // }
 }
 
 .main-top {
